--- a/templates/accounts/signup.html
+++ b/templates/accounts/signup.html
@@ -1,10 +1,35 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+{% extends 'accounts/base.html' %}
+{% load static %}
+{% block content %}
+<div class="row container-signup">
+  <div class="col container-video">
+    <video class="sidebar-video" playsinline autoplay muted loop src="{% static 'assets/video-animated(1080p).mp4' %}"></video>
+  </div>
+  <div class="col-md-auto button-back">
+    <a href="{% url 'login' %}" class="btn btn-outline-dark" type="button"><i class="fa fa-chevron-left" aria-hidden="true"></i></a>
+  </div>
+  <div class="col col-lg-4 container-form">
+    <label class="title">Sign up to Resh</label>
+    <form action="{% url 'signup' %}" method="POST">
+      {% csrf_token %}
+      {% for field in form.visible_fields %}
+        <div class="mb-3 input">
+          <strong><label for="{{ field.id_for_label }}" class="form-label">{{ field.label }}</label></strong>
+          {{ field }}
+        </div>
+        {% for error in field.errors %}
+            <div class="alert alert-danger" role="alert">
+              {{ error }}
+            </div>
+        {% endfor %}
+      {% endfor %}
+        <div class="d-grid gap-2 col">
+          <button type="submit" class="btn btn-dark">Create Account</button>
+        </div>
+    </form>
+    <p class="link-text" style="text-align: center;">Already have an account?<a href="{% url 'login' %}" class="link-dark"> Sign in</a></p>
+    <p class="link-protect"> This site is protected by reCAPTCHA and the Google <a href="https://policies.google.com/privacy" class="link-dark">Privacy Policy</a> and <a href="https://policies.google.com/terms" class="link-dark">Terms of Service</a> apply. </p>
+  </div>
+  <div class="col col-lg-5"></div>
+</div>
+{% endblock %}
