--- a/templates/dashboard/home.html
+++ b/templates/dashboard/home.html
@@ -23,7 +23,7 @@
             </div>
             <div class="col col-lg-10">
               <label for="upPassword" class="form-label">Password</label>
-              <input type="password" value="{{ user.password }}" class="form-control" id="upPassword" >
+              <input type="password" value="*******" class="form-control" id="upPassword" >
             </div>
           </form>
           {% endif %}
